--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "repository": "https://github.com/ronelliott/reflekt",
   "scripts": {
-    "test": "mocha --growl --recursive"
+    "test": "mocha"
   },
   "keywords": [
     "reflection"
