Various tweaks, more tests.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lib-cov
 coverage
 coverage.html
 
+# Coveralls.io configuration
+.coveralls.yml
+
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
