--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "license": "ISC",
   "repository": "https://github.com/ronelliott/reflekt",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
+    "coverage:upload": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "keywords": [
     "reflection"
   ],
   "devDependencies": {
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.16",
     "mocha": "^2.2.4",
+    "mocha-lcov-reporter": "0.0.2",
     "should": "^6.0.1",
     "sinon": "^1.14.1"
   },
