--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - 0.10
 script:
-  npm run test:coverage
+  npm run test:ci
 after_success:
   npm run coverage:upload
