--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "reflection"
   ],
   "devDependencies": {
-    "browserify": "^10.2.4",
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.3.17",
-    "jsdoc-to-markdown": "^1.1.1",
-    "mocha": "^2.2.5",
-    "mocha-lcov-reporter": "0.0.2",
-    "phantomjs": "^1.9.17",
-    "should": "^7.0.1",
-    "sinon": "^1.15.1",
-    "testem": "^0.8.4"
+    "browserify": "^13.0.1",
+    "coveralls": "^2.11.11",
+    "istanbul": "^1.1.0-alpha.1",
+    "jsdoc-to-markdown": "^1.3.6",
+    "mocha": "^3.0.0-1",
+    "mocha-lcov-reporter": "1.2.0",
+    "phantomjs": "^2.1.7",
+    "should": "^9.0.2",
+    "sinon": "^2.0.0-pre.2",
+    "testem": "^1.10.0-1"
   }
 }
